<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather App</string>
    <string name="location">St. Paul, MN</string>
    <string name="updated_at">Updated: %1$s</string>
    <string name="temperature">%1$d°</string>
    <string name="feels_like">Feels like %1$d°</string>
    <string name="weather_status">%1$s</string>
    <string name="temp_range">Low %1$d°  |  High %2$d°</string>
    <string name="humidity">Humidity: %1$d%%</string>
    <string name="pressure">Pressure: %1$d hPa</string>
    <string name="error_message">Something went wrong</string>
    <string name="weather_icon_description">Weather icon</string>
    <string name="enter_zipcode">Enter Zip Code</string>
    <string name="search">Search</string>
    <string name="forecast">Forecast</string>
    <string name="current_weather">Current Weather</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="location_permission_required">Location permission is required for this feature</string>
    <string name="notification_permission_required">Notification permission is required for weather updates</string>
    <string name="my_location">My Location</string>
    <string name="weather_notification_title">Current Weather</string>
    <string name="weather_notification_channel_name">Weather Updates</string>
    <string name="weather_notification_channel_description">Shows current weather information</string>
    <string name="location_service_notification_title">Weather App</string>
    <string name="location_service_notification_text">Getting weather updates for your location</string>
    <string name="enter_zip_code">Enter ZIP Code</string>
    <string name="view_forecast">View Forecast</string>
    <string name="invalid_zip_code">Please enter a valid 5-digit ZIP code</string>
    <string name="forecast_title">16-Day Forecast</string>
    <string name="api_key">7eca67a15ebf3fc6374e4527a6f8a0fe</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_ok">OK</string>
    <string name="error_invalid_zip">Invalid ZIP code. Please enter a valid 5-digit ZIP code.</string>
</resources>